Bug 127908 - FILEOPEN XLSX The custom position of vertical chart axis title changes
Summary: FILEOPEN XLSX The custom position of vertical chart axis title changes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-10-01 13:05 UTC by NISZ LibreOffice Team
Modified: 2020-02-11 12:44 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Excel and Calc (86.31 KB, image/png)
2019-10-01 13:07 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in PowerPoint and Impress (80.57 KB, image/png)
2019-10-01 13:08 UTC, NISZ LibreOffice Team
Details
Example file from Excel with changed vertical chart axis title position. (18.68 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-10-01 13:08 UTC, NISZ LibreOffice Team
Details
Example file from PowerPoint with changed vertical chart axis title position. (39.73 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2019-10-01 13:08 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-10-01 13:05:10 UTC
Description:
The custom position of vertical chart axis title changes in Microsoft Excel document when the document is opened in LibreOffice 6.3. The starting point of the vertical chart axis title changes to the ending point of vertical chart axis title.


Steps to Reproduce:
    1. Create a document in Microsoft Excel.
    2. Insert a chart.
    3. Change the position of vertical chart axis title.
    4. Save the file.
    5. Open the same document in LibreOffice Calc 6.3.

Actual Results:
The starting of vertical chart axis title changes to the endpoint of vertical chart axis title. The same happens in PowerPoint presentations when they are opened in LibreOffice Impress 6.3.

Expected Results:
The starting point of vertical chart axis title should not change.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: c45d477b0a0038d9c25176cf7cff299e5ddf3a7a
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-09-30_05:06:55
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

It also happens since:
Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale: hu-HU (hu_HU)

Before it was wrong too but differently.
Comment 1 NISZ LibreOffice Team 2019-10-01 13:07:19 UTC
Created attachment 154679 [details]
Screenshot of the original document side by side in Excel and Calc
Comment 2 NISZ LibreOffice Team 2019-10-01 13:08:15 UTC
Created attachment 154680 [details]
Screenshot of the original document side by side in PowerPoint and Impress
Comment 3 NISZ LibreOffice Team 2019-10-01 13:08:37 UTC
Created attachment 154681 [details]
Example file from Excel with changed vertical chart axis title position.
Comment 4 NISZ LibreOffice Team 2019-10-01 13:08:54 UTC
Created attachment 154682 [details]
Example file from PowerPoint with changed vertical chart axis title position.
Comment 5 raal 2019-10-01 15:45:50 UTC
Confirm with Version: 6.4.0.0.alpha0+
Build ID: 49a634425f0d433541f8309f2575c8bdfd67afbe
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Comment 6 Xisco Faulí 2019-10-17 10:45:57 UTC
Also reproduced in

Version: 5.3.0.0.alpha0+
Build ID: 646aabc06c4bd10b2dbf9ac83ccb5c7ea1cc7283
CPU Threads: 4; OS Version: Linux 4.15; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 7 Commit Notification 2019-10-22 12:34:24 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ff954d5f780cae5df6942e97b713cfc19449145

tdf#127908 tdf#128193 Chart OOXML: Fix Custom Y axis title position

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.